Kubernetes/Deployment-Canary/service-version1.yml
kind: Service
apiVersion: v1
metadata:
  name: dizertatie-service-version1
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 7000
      protocol: TCP
  selector:
    app: dizertatie
    version: "1"
