Kubernetes/Deployment-Canary/ingress-version2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dizertatie-ingress-version2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
    - host: canary.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dizertatie-service-version2
                port:
                  number: 80
